Search API 1.x, dev (xxxx-xx-xx):
---------------------------------

Search API 1.9 (2018-07-19):
----------------------------
- #2956012 by drunken monkey, DuaelFr: Added uncustomized view modes as options
  when rendering items.
- #2980903 by drunken monkey, kristofferwiklund, borisson_: Fixed undefined
  index notice in Views date filter.
- #2982693 by jhedstrom, borisson_, drunken monkey: Adapted tests to latest
  Core changes.
- #2971033 by mErilainen, drunken monkey, borisson_: Added an option for prefix
  matching to the database backend.
- #2973034 by idebr, drunken monkey: Removed outdated @todo comment.
- #2972510 by msankhala, drunken monkey: Replaced Unicode::* methods with mb_*
  functions.
- #2973047 by idebr, drunken monkey: Fixed misnamed test config files.
- #2860167 by drunken monkey, borisson_, fenstrat: Added "orderby" to our
  config schema definitions.
- #2948820 by capysara, drunken monkey, borisson_: Added a link to the "need to
  reindex" message on the Filters tab.
- #2965803 by capysara, drunken monkey: Fixed left-over use of @url placeholder.
- #2957650 by drunken monkey, borisson_: Fixed two minor problems.
- #2939010 by nedjo, drunken monkey: Fixed deleted fields when index is created
  during module install.
- #2931730 by drunken monkey, borisson_, chanderbhushan: Adapted to changes in
  drupal_set_message().
- #2955607 by drunken monkey, borisson_: Removed our custom Query::__wakeup()
  work-around.
- #2940138 by drunken monkey, borisson_: Switched to new Core tempstore service.
- #2936630 by drunken monkey, borisson_: Adapted override detection code to use
  Config::hasOverrides().
- #2961537 by drunken monkey: Increased Core dependency to Drupal 8.5.
- #2959809 by drunken monkey, Rob230, mkalkbrenner, borisson_: Fixed small
  coding mistake in the "URL field" processor.
- #2960931 by drunken monkey, borisson_: Fixed viewing of multiple content
  entity items.

Search API 1.8 (2018-04-16):
----------------------------